cxbx website: http://www.caustik.com/xbox/

version: 0.7.2 (??/??/03)
--------------------------------

- Textures

version: 0.7.1 (05/30/03)
--------------------------------

- Video Configuration!

- Fixed some Xbe change detection logic

- Open Xbe and Import Exe can be done when a file
  is already open (automatically closes, checking if
  you made changes first).

- Direct3D Lighting is working!

version: 0.7.0 (05/27/03)
--------------------------------

- Magically shrunk cxbx.dll/cxbx.exe file sizes enormously!

- Added Controller Input and Configuration!

- Added Recent Xbe/Exe file menus

- Support __declspec(thread) style TLS

- Fixed GUI color issues

- Massive code re-organization.

- Sooo many random optimizations

- Went lower level with certain components of
  emulation. Progress should speed up.

- Some Xbe parsing and debug output fixes.
  You should now be able to deal with the
  slightly odd Linux Xbe files.

- Much better emulation exception handling

version: 0.6.0-pre12 (02/23/03)
--------------------------------

- HLE has advanced to intercepting Direct3D and
  Xapilib calls. A simple Xbox app built with a
  4361 or 4627 XDK has been shown to work.

version: 0.6.0-pre11 (02/09/03)
--------------------------------

- HLE has begun. Cxbx is capable of emulating a
  blank XDK project. That is, if you had the XDK
  and created an Xbox "game" that did absolutely
  nothing, Cxbx could run it :P. Sounds pointless,
  but it is actually very significant

- New icon! Pending approval for use by the author

version: 0.6.0-pre10 (02/07/03)
--------------------------------

- Tons of debug console output when opening, or
  converting, or saving xbe and exe files. This
  was very easy to add because of the flexible
  new debug console technique.

version: 0.6.0-pre9 (02/06/03)
--------------------------------

- Released source code under GNU license.

- Debugging interface changed. Much cleaner.

version: 0.5.2 (12/14/02)